--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -1,15 +1,15 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Active Listings</h2>
+    <h2>{{ title }}</h2>
 
     <div class="container all-listings">
     {% for listing in listings reversed %}
         <div class="row listing">
-            <div class="col-4 listing-image">
+            <div class="col-4 listing-image-index">
                 <a href="{% url 'listing page' listing.pk %}"><img src="{% if listing.image_url %} {{ listing.image_url }} {% else %}
                 https://sjkelectrical.com.my/img/default-image.jpg
-                {% endif %}" alt="listing  image" class="mx-auto"></a>
+                {% endif %}" alt="listing  image" class="mx-auto d-block"></a>
 
             </div>
             <div class="col-6">
