--- a/auctions/static/auctions/styles.scss
+++ b/auctions/static/auctions/styles.scss
@@ -77,16 +77,30 @@ p.listing-current-price-text {
   }
 }
 
-.listing-image {
+%listing-image-properties {
   img {
-  display: block;
-  width: 100%;
-  height: auto;
-  @media (min-width: 992px) {
-    width: 50%;
+    //display: block;
+    width: 100%;
+    height: auto;
+
+  }
+}
+
+
+.listing-image-index {
+  @extend %listing-image-properties;
+  img {
+    @media (min-width: 992px) {
+      width: 50%;
     }
   }
+}
+
+
+.listing-image-listing {
+  @extend %listing-image-properties;
   height: 400px;
+  margin-top: 30px;
 
 }
 
@@ -110,13 +124,14 @@ p.listing-current-price-text {
 }
 
 .listing-page-bid-section {
-  margin-top: 40px;
+  margin-top: 70px;
   button {
     font-size: 10px;
     background: gray;
     border: rebeccapurple;
-
+    margin-left: 120px;
   }
+
 }
 
 .errorlist {
@@ -125,10 +140,39 @@ p.listing-current-price-text {
 }
 
 .listing-page-bid-close-section {
-  margin-top: 30px;
+  margin-top: 50px;
   button {
     background: #406283;
     border-radius: 10px;
     color: white;
   }
+}
+
+.listing-page-end-result {
+  margin-top: 40px;
+}
+
+fieldset.disabled {
+  background: white;
+  opacity: 0.4;
+}
+
+.listing-closed-info {
+  font-size: 12px;
+  color: gray;
+}
+
+#comment-form {
+  .form-group {
+    padding: 0;
+    margin: 0 0 10px;
+  }
+  label {
+    padding: 0;
+    margin: 0;
+  }
+}
+
+.type-your-comment {
+  margin-top: 50px
 }
