--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -28,7 +28,14 @@
                 <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'category listing' %}">Categories</a>
+            </li>
+
             {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'watchlist page' %}">Watchlist Items</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'create listing' %}">Create a New Listing</a>
                 </li>
